crates/data-dict/tests/snapshots/validate_spec__s10_duplicate_column_name.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: table
    columns:
      - name: id
        type: number(id)
        examples: [1, 2, 3]
      - name: id
        type: string
        examples: [a, b, c]
────────────────────────────────────────
error[S10]: Column names must be unique within a table.
  --> dict.yaml:9:15
   |
LL |   - name: table
LL |     columns:
LL |       - name: id
...
LL |       - name: id
   |               ^^ is duplicated
